# slo-recommendation-engine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  prometheus.dev.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-staging.yml
alembic/: env.py
alembic/versions/: 0493364c9562_create_sli_aggregates_table.py  13cdc22bf8f3_create_services_table.py  2d6425d45f9f_create_api_keys_table.py  4f4258078909_create_service_dependencies_table.py  7b72a01346cf_create_circular_dependency_alerts_table.py  b8ca908bf04a_add_service_type_to_services.py  ecd649c39043_create_slo_recommendations_table.py
demo/: DEMO_README.md  concept_renderer.py  concepts.py  setup_demo.sh  streamlit_demo.py
dev/: README.md
dev/active/demo-fr4-fr5-fr7/: demo-fr4-fr5-fr7-context.md  demo-fr4-fr5-fr7-tasks.md
dev/active/fr1-dependency-graph/: README.md  fr1-context.md  fr1-dependency-graph-code-review.md  fr1-plan.md  fr1-tasks.md
dev/active/fr2-slo-recommendations/: README.md  fr2-context.md  fr2-plan.md  fr2-tasks.md
dev/active/fr3-constraint-propagation/: SESSION_5_SUMMARY.md  fr3-constraint-propagation-context.md  fr3-constraint-propagation-plan.md  fr3-constraint-propagation-tasks.md  session-log.md
dev/archive/demo-fr4-fr5-fr7/: demo-fr4-fr5-fr7-context.md
dev/archive/fr2-slo-recommendations/: README.md  fr2-context.md
dev/archive/fr3-constraint-propagation/: README.md  SESSION_4_SUMMARY.md  fr3-constraint-propagation-context.md
dev/notes/: ai-ml-system-design.md  demo-hacks.md  drift-detection-ensemble.md  graph-ingestion-and-circular-dependencies.md  slo-engine-concepts.md
docs/1_product/: PRD.md  problem_statement.md  research.md  research_1.md  research_2.md
docs/2_architecture/: TRD.md  system_design.md
docs/3_guides/: constraint_propagation_guide.md  core_concepts.md  dependency_graph_guide.md  getting_started.md  slo_recommendations_guide.md
docs/4_testing/: coverage_report.md  index.md
helm/slo-engine/: Chart.yaml  values.yaml
helm/slo-engine/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
k8s/staging/: values-override.yaml
scripts/: demo.sh
src/: __init__.py
src/application/: __init__.py
src/application/dtos/: __init__.py  common.py  constraint_analysis_dto.py  dependency_graph_dto.py  dependency_subgraph_dto.py  impact_analysis_dto.py  slo_lifecycle_dto.py  slo_recommendation_dto.py
src/application/use_cases/: __init__.py  batch_compute_recommendations.py  detect_circular_dependencies.py  generate_slo_recommendation.py  get_error_budget_breakdown.py  get_slo_recommendation.py  ingest_dependency_graph.py  manage_slo_lifecycle.py  query_dependency_subgraph.py  run_constraint_analysis.py  run_impact_analysis.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  active_slo.py  circular_dependency_alert.py  constraint_analysis.py  impact_analysis.py  service.py  service_dependency.py  sli_data.py  slo_recommendation.py
src/domain/services/: __init__.py  (+12 more)
src/infrastructure/: __init__.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_constraint_analysis.py  test_dependency_api.py  test_slo_recommendations.py
tests/integration/: __init__.py  conftest.py
(+117 files in other folders)
